--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,12 @@
 @charset "utf-8";
 /* CSS Document */
+html {
+  font-size: 16px;
+  box-sizing: border-box;
+}
 
 body,td,th,p{
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
+	font-family: 'Roboto', sans-serif;
 	color: #333;
 	line-height: 1.5;
 }
@@ -13,8 +16,8 @@ body {
 	position:relative;
 }
 ul, li {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
+	font-family: 'Roboto',Arial, Helvetica, sans-serif;
+	/*font-size: 10pt;*/ font-size: 16px;
 	color: #333;
 }
 a {
@@ -29,29 +32,39 @@ a img{
 	border: none 0px #fff;
 }
 h1, h2, h3, h4, h5, h6 {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Roboto',Arial, Helvetica, sans-serif;
   margin: 0 0 20px;
 }
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+header {
+  max-width: 1200px;
+  margin: auto;
+}
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
+  max-width: 1200px;
+  margin: auto;
 }
 #footer {
   background-color: #444;
   color: #aaa;
-  font-size: 8pt;
+  font-size: 12px;
   letter-spacing: 1px;
-  padding: 25px;
+  padding: 25px 0;
   text-align: center;
   text-transform: uppercase;
+}
+footer {
+  max-width: 1200px;
+  margin: auto;
 }
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  height: 80px;
+  /* height: 80px; */
   background-color: #252831;
   text-align:center;
 }
@@ -60,7 +73,7 @@ nav h1 {
 }
 nav h1 a {
   color: #fff;
-  font-size: 14pt;
+  font-size: 22px;
   font-weight: 200;
   letter-spacing: 10px;
   text-transform: uppercase;
@@ -69,9 +82,8 @@ nav h1 a {
     padding: 10px 40px 16px;
     list-style: none;
     background-color: #eee;
-    font-size: 17px;
+    font-size: 18px;
     margin: 0;
-    width: calc(50% - 80px);
 }
 
 /* Display list items side by side */
@@ -106,7 +118,7 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
+  /* height: 50px; */
   background-color: #3397DB;
   align-items: center;
 }
@@ -120,8 +132,8 @@ nav h1 a {
 .filter-options select {
   background-color: white;
   border: 1px solid #fff;
-  font-family: Arial,sans-serif;
-  font-size: 11pt;
+  font-family: 'Roboto',Arial,sans-serif;
+  /*font-size: 11pt;*/ font-size: 18px;
   height: 35px;
   letter-spacing: 0;
   margin: 10px;
@@ -140,7 +152,7 @@ nav h1 a {
 #restaurants-list li {
   background-color: #fff;
   border: 2px solid #ccc;
-  font-family: Arial,sans-serif;
+  font-family: 'Roboto',Arial,sans-serif;
   margin: 15px;
   min-height: 380px;
   padding: 0 30px 25px;
@@ -148,33 +160,35 @@ nav h1 a {
   width: 270px;
 }
 #restaurants-list .restaurant-img {
-  background-color: #ccc;
+  /* background-color: #ccc; */
   display: block;
   margin: 0;
   max-width: 100%;
-  min-height: 248px;
-  min-width: 100%;
+  margin-top: 20px;
+  border-radius: 5px;
+  /* min-height: 248px;
+  min-width: 100%; */
 }
 #restaurants-list li h1 {
   color: #f18200;
-  font-family: Arial,sans-serif;
-  font-size: 14pt;
+  font-family: 'Roboto',Arial,sans-serif;
+  font-size: 22px;
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
-  margin: 20px 0 10px;
+  margin: 25px 0 10px;
   text-transform: uppercase;
 }
 #restaurants-list p {
   margin: 0;
-  font-size: 11pt;
+  /*font-size: 11pt;*/ font-size: 16px;
 }
 #restaurants-list li a {
   background-color: orange;
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
-  font-size: 10pt;
+  /*font-size: 10pt;*/ font-size: 16px;
   margin: 15px 0 0;
   padding: 8px 30px 10px;
   text-align: center;
@@ -188,29 +202,29 @@ nav h1 a {
   top: 0;
   width: 100%;
   z-index: 1000;
-}
-.inside #map-container {
-  background: blue none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
   right: 0;
-  top: 80px;
-  width: 50%;
+
 }
-.inside #map {
-  background-color: #ccc;
-  height: 100%;
-  width: 100%;
-}
+
 .inside #footer {
   bottom: 0;
   position: absolute;
-  width: 50%;
+  width: 100%;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
 }
-#restaurant-name {
+
+
+/* #restaurant-name {
   color: #f18200;
   font-family: Arial,sans-serif;
-  font-size: 20pt;
+  font-size: 32px;
   font-weight: 200;
   letter-spacing: 0;
   margin: 15px 0 30px;
@@ -221,13 +235,13 @@ nav h1 a {
 	width: 90%;
 }
 #restaurant-address {
-  font-size: 12pt;
+  font-size: 20px;
   margin: 10px 0px;
 }
 #restaurant-cuisine {
   background-color: #333;
   color: #ddd;
-  font-size: 12pt;
+  font-size: 20px;
   font-weight: 300;
   letter-spacing: 10px;
   margin: 0 0 20px;
@@ -247,7 +261,7 @@ nav h1 a {
 }
 #reviews-container h2 {
   color: #f58500;
-  font-size: 24pt;
+  font-size: 40px;
   font-weight: 300;
   letter-spacing: -1px;
   padding-bottom: 1pt;
@@ -272,4 +286,4 @@ nav h1 a {
 }
 #restaurant-hours td {
   color: #666;
-}
+} */
