--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@ header {
   margin: auto;
 }
 #maincontent {
-  background-color: #f3f3f3;
+  background-color: #F5F5F5;
   min-height: 100%;
   max-width: 1200px;
   margin: auto;
@@ -65,6 +65,7 @@ footer {
 nav {
   width: 100%;
   /* height: 80px; */
+  padding: 15px 0;
   background-color: #252831;
   text-align:center;
 }
@@ -111,7 +112,7 @@ nav h1 a {
     text-decoration: underline;
 }
 /* ====================== Map ====================== */
-
+#map-container {max-width: 1200px;;}
 #map {
   height: 400px;
   width: 100%;
@@ -228,10 +229,9 @@ nav h1 a {
 }
 
 .inside #map {
-  top: 127px;
+  top: 119px;
   height: 250px;
 }
-
 
 #restaurant-container {
   border-bottom: 1px solid #d9d9d9;
@@ -245,7 +245,7 @@ nav h1 a {
 #restaurant-name {
   font-size: 30px;
   color: #f18200;
-  font-weight: 300;
+  font-weight: 400;
   letter-spacing: 5px;
   margin: 30px 0 10px 30px;
   text-transform: uppercase;
@@ -305,7 +305,7 @@ nav h1 a {
 #reviews-container h2 {
   color: #f58500;
   font-size: 30px;
-  font-weight: 300;
+  font-weight: 400;
   letter-spacing: 5px;
   text-transform: uppercase;
   line-height: 1.1;
@@ -369,7 +369,7 @@ nav h1 a {
   display: inline-block;
   padding: 5px 10px;
   background-color: #f18200;
-  color: #f3f3f3;
+  color:/*  #f3f3f3; */ white;
   margin: 16px 0 0 20px;
   border-radius: 5px;
   text-transform: uppercase;
