--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-/* CSS Document */
+
 html {
   font-size: 16px;
   box-sizing: border-box;
@@ -28,6 +28,9 @@ a:hover, a:focus {
 	color: #3397db;
 	text-decoration: none;
 }
+
+
+
 a img{
 	border: none 0px #fff;
 }
@@ -50,16 +53,23 @@ header {
 }
 #footer {
   background-color: #444;
-  color: #aaa;
+  /* color: #aaa; */
+  color: #DBDBDB;
   font-size: 12px;
   letter-spacing: 1px;
   padding: 25px 0;
   text-align: center;
   text-transform: uppercase;
 }
+
+
 footer {
   max-width: 1200px;
   margin: auto;
+}
+
+footer a {
+  color: #fff;
 }
 /* ====================== Navigation ====================== */
 nav {
@@ -78,8 +88,15 @@ nav h1 a {
   font-weight: 200;
   letter-spacing: 10px;
   text-transform: uppercase;
-  padding: 20px 0;
 }
+
+nav h1 a:focus {
+  outline: none;
+  text-decoration: underline;
+  color: #fff;
+  font-weight: 400;
+} 
+
 #breadcrumb {
     padding: 10px 40px 16px;
     list-style: none;
@@ -102,7 +119,7 @@ nav h1 a {
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
+    color:/*  #0275d8; */ #14598A; 
     text-decoration: none;
 }
 
@@ -122,7 +139,7 @@ nav h1 a {
 .filter-options {
   width: 100%;
   /* height: 50px; */
-  background-color: #3397DB;
+  background-color: /* #3397DB; */ #14598A;
   align-items: center;
   display: flex;
   flex-wrap: wrap; 
@@ -146,6 +163,11 @@ nav h1 a {
   width: 200px;
 }
 
+.filter-options select:focus{
+  color: #A52A2A;
+  background-color: #ddd;
+}
+
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
   background-color: #f3f3f3;
@@ -166,6 +188,9 @@ nav h1 a {
   padding: 0 30px 25px;
   text-align: left;
   width: 270px;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: space-between;
 }
 #restaurants-list .restaurant-img {
   /* background-color: #ccc; */
@@ -178,7 +203,8 @@ nav h1 a {
   min-width: 100%; */
 }
 #restaurants-list li h1 {
-  color: #f18200;
+  color: /*  #f18200; */#A52A2A;
+  background-color: #fff;
   font-family: 'Roboto',Arial,sans-serif;
   font-size: 22px;
   font-weight: 200;
@@ -192,18 +218,26 @@ nav h1 a {
   /*font-size: 11pt;*/ font-size: 16px;
 }
 #restaurants-list li a {
-  background-color: orange;
-  border-bottom: 3px solid #eee;
+  background-color: #ffa500; /* #A52A2A; */
   color: #fff;
   display: inline-block;
-  /*font-size: 10pt;*/ font-size: 16px;
+  font-size: 16px;
   margin: 15px 0 0;
   padding: 8px 30px 10px;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
+  border-radius: 5px;
 }
-
+#restaurants-list li a:hover,
+#restaurants-list li a:focus {
+  background-color: #A52A2A;
+  outline: none;
+  text-decoration: underline;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14),
+  0 3px 1px -2px rgba(0, 0, 0, .2),
+  0 1px 5px 0 rgba(0, 0, 0, .12);
+}
 /* ====================== Restaurant Details ====================== */
 .inside header {
   position: fixed;
@@ -244,7 +278,7 @@ nav h1 a {
 
 #restaurant-name {
   font-size: 30px;
-  color: #f18200;
+  color: /*  #f18200; */#A52A2A;
   font-weight: 400;
   letter-spacing: 5px;
   margin: 30px 0 10px 30px;
@@ -303,7 +337,7 @@ nav h1 a {
 }
 
 #reviews-container h2 {
-  color: #f58500;
+  color: /* #f58500; */#A52A2A;
   font-size: 30px;
   font-weight: 400;
   letter-spacing: 5px;
@@ -368,7 +402,7 @@ nav h1 a {
   font-size: 20px;
   display: inline-block;
   padding: 5px 10px;
-  background-color: #f18200;
+  background-color: /*  #f18200; */#A52A2A;
   color:/*  #f3f3f3; */ white;
   margin: 16px 0 0 20px;
   border-radius: 5px;
