--- a/css/styles.css
+++ b/css/styles.css
@@ -277,7 +277,6 @@ nav h1 a:focus {
 #restaurant-name {
   color: #14598A;
   font-weight: 400;
-  letter-spacing: 5px;
   margin: 30px 0 10px 30px;
   text-transform: uppercase;
   line-height: 1.1;
@@ -441,15 +440,15 @@ nav h1 a:focus {
     }
 }
 
-@media screen and (max-height: 700px) {
+@media screen and (max-height: 699px) {
   #map.home {
       display: none;
   }
 }
 
 @media screen and (max-height: 500px) {
-  #map-container  {
-      display: none;
+  .inside #map {
+      height: 150px;
   }
 }
 
