--- a/css/rest_info.css
+++ b/css/rest_info.css
@@ -458,6 +458,73 @@ nav h1 a:focus {
      color: #888;
   }
   
+  /* ----- Modal dialog ------ */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1; 
+  padding-top: 30vh; 
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgba(0,0,0,0.4);
+  will-change: transform; /* make a new layer*/
+}
+
+.modal-content {
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 250px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  animation-name: animatetop;
+  animation-duration: 0.2s;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  border-radius: 5px;
+}
+
+@keyframes animatetop {
+  from {top:-300px; opacity:0}
+  to {top:0; opacity:1}
+}
+
+.modal-button-danger, .modal-button-ok, .modal-button-cancel {
+  border-radius: 5px;
+  padding: 10px;
+  width: 100px;
+  border: none;
+}
+
+.modal-button-danger:hover, .modal-button-danger:focus, 
+.modal-button-ok:hover, .modal-button-ok:focus, 
+.modal-button-cancel:hover, .modal-button-cancel:focus {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+.modal-upper-text {
+  width: 100%;
+  padding: 10px 10px 30px;
+}
+.modal-button-danger {
+  color: white; 
+  background-color: #A52A2A
+}
+
+.modal-button-ok {
+  color: white; 
+  background-color: rgb(2, 109, 2);
+}
+
+.modal-button-cancel {
+  color: white;
+  background-color: grey;
+}
   
 
   /******************************************/
